change content in card 4

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                     <img src="images/4.jpg" class="page-icon-img" alt="Nam moi">
                 </div>
                 <p class="message">
-                    Chúc bé yêu của anh có một năm 2026 thật bùng nổ, khỏe khoắn hơn 2025.
+                    Chúc bé yêu của anh có một năm 2026 thật bùng nổ, khoắn khỏe hơn 2025.
                     Hy vọng những điều em mong muốn sẽ thành hiện thực và đặc biệt là có nhìu tiền nhennn 💸
                 </p>
                 <!-- <span class="page-indicator">4 / 5</span> -->
