change content in card 3

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                 </div>
                 <p class="message">
                     Hé lô bé đẹp của anh,<br><br>
-                    Chắc đây là lần đầu tiên anh làm điều này cho em.
+                    Đây là lần đầu tiên anh làm điều này cho em.
                     Tuy có hơi sến súa nhưng mà mong em hãy đón nhận nó nhé hé hé 💕
                 </p>
                 <!-- <span class="page-indicator">1 / 5</span> -->
@@ -232,7 +232,7 @@
                 </div>
                 <p class="message">
                     Hi zọng bé yêu của anh có một ngày Valentine thật vui vẻ, cười nắc nẻ, he hẻ bên cạnh ck iu.
-                    Chúc bé yêu sẽ luôn vui tươi, đón nhận những điều tốt đẹp nhất 💗
+                    Chúc bé yêu sẽ luôn vui tươi, tích cực và đón nhận những điều tốt đẹp nhất đến với em nhé 💗
                 </p>
                 <!-- <span class="page-indicator">3 / 5</span> -->
             </div>
